# hexafe-plotstats

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 2026-05-16-audit_implementation_plan.md  rust_performance_plan.md  rust_renderer_plan.md  session_state.md
examples/: basic_usage.py  pandas_usage.py
native/hexafe-plotstats-native/: Cargo.toml  pyproject.toml
native/hexafe-plotstats-native/src/: lib.rs  spec.rs  svg.rs  text.rs
native/hexafe-plotstats-native/src/charts/: histogram.rs  iqr.rs  mod.rs  scatter.rs  violin.rs
scripts/: benchmark_large_dataset.py  benchmark_renderers.py  compare_renderers.py
src/hexafe_plotstats/: __init__.py  i18n.py  themes.py
src/hexafe_plotstats/adapters/: __init__.py  _core.py  groupstats.py  metroliza.py  pandas.py
src/hexafe_plotstats/interactive/: __init__.py  scatter.py
src/hexafe_plotstats/models/: __init__.py  common.py  fits.py  payloads.py  render.py  specs.py  summaries.py
src/hexafe_plotstats/payloads/: __init__.py  _common.py  histogram.py  iqr.py  scatter.py  violin.py
src/hexafe_plotstats/policies/: __init__.py  sampling.py  scatter_mode.py
src/hexafe_plotstats/renderers/: __init__.py  _common.py  api.py  base.py
src/hexafe_plotstats/specs/: __init__.py  histogram.py  iqr.py  mapping.py  primitives.py  scatter.py  violin.py
tests/: test_adapters.py  test_interactive_scatter.py  test_native_renderer_fixtures.py  test_native_renderer_smoke.py  test_renderer_backends.py
tests/fixtures/: native_renderer_resolved_specs.json
(+27 files in other folders)
