[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexafe-plotstats"
version = "0.1.0a1"
description = "Library-first statistical visualization payloads and matplotlib renderers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "hexafe" }]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.23",
  "scipy>=1.10",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
plotly = ["plotly>=5.20"]
test = ["pandas>=1.5", "pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
