[package]
name = "hexafe_plotstats_native"
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"

[lib]
name = "_hexafe_plotstats_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tiny-skia = "0.12"
resvg = "0.47"
png = "0.18"
