[build-system]
requires = ["maturin>=1.12,<2"]
build-backend = "maturin"

[project]
name = "hexafe-plotstats-native"
version = "0.1.0a0"
description = "Optional Rust renderer backend for hexafe-plotstats."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "hexafe" }]

[tool.maturin]
module-name = "_hexafe_plotstats_native"
features = ["pyo3/extension-module"]
